--- a/_posts/2025-09-29-coffee.md
+++ b/_posts/2025-09-29-coffee.md
@@ -9,7 +9,6 @@ author: Nina Foster
 authors:
 - Nina Foster
 date: 2025-09-01
-layout: post
 thumbnail: coffee.jpg
 permalink: /coffee
 tags: beverage stimulant tropical high-altitude shrub tree
@@ -18,7 +17,11 @@ featured: true
 media_subpath: https://raw.githubusercontent.com/plant-humanities/chirpy/main/assets/coffee
 image:
   path: wc:Coffee_berries_in_Hacienda_Guayabal%2C_Colombia.jpg
+
+layout: post
 auto_float: true
+group_embeds: true
+col2: true
 ---
 
 Coffee is one of the world’s most important agricultural commodities, supporting the livelihoods of an estimated 125 million people.[^1] With more than 120 species in the genus *Coffea*, one in particular has dominated global production, trade, and consumption, and is prized for its impeccable cup quality: Arabica coffee (*Coffea arabica*). The plant historically accounted for at least two-thirds of the world’s coffee production, though the second-most cultivated coffee species, robusta (*Coffea canephora*), is on the rise.[^2]
